      merging from trunk and completes much faster. To see all merged
      revisions, use the new ``-v`` flag.  (Ian Clatworthy)

    * ``bzr log --line`` now shows any tags after the date and before
      the commit message. If you have scripts which parse the output
      from this command, you may need to adjust them accordingly.
      (Ian Clatworthy)

  NEW FEATURES:

    * Add support for filtering `bzr missing` on revisions.  Remote revisions
      can be filtered using `bzr missing -r -20..-10` and local revisions can
      be filtered using `bzr missing --my-revision -20..-10`.
      (Marius Kruger)

    * ``bzr log -p`` displays the patch diff for each revision.
      When logging a file, the diff only includes changes to that file.
      (Ian Clatworthy, #202331, #227335)

    * ``bzr log`` supports a new option called ``-n N`` or ``--level N``.
      A value of 0 (zero) means "show all nested merge revisions" while
      a value of 1 (one) means "show just the top level". Values above
      1 can be used to see a limited amount of nesting. That can be
      useful for seeing the level or two below PQM submits for example.
      To force the ``--short`` and ``--line`` formats to display all nested
      merge revisions just like ``--long`` does by default, use a command
      like ``bzr log --short -n0``. To display just the mainline using
      ``--long`` format, ``bzr log --long -n1``.
      (Ian Clatworthy)

  IMPROVEMENTS:

    * ``bzr init`` will now print a little less verbose output.
      (Marius Kruger)

    * ``bzr log`` is now much faster in many use cases, particularly
      at incrementally displaying results and filtering by a
      revision range. (Ian Clatworthy)

    * ``bzr log --short`` and ``bzr log --line`` now show tags, if any,
      for each revision. The tags are shown comma-separated inside
      ``{}``. For short format, the tags appear at the end of line
      before the optional ``[merge]`` indicator. For line format,